--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 </head>
 <body>
     <h1>Rahul Baraiya</h1>
-    <img src="./profile-image.jpg" alt="Rahul Baraiya's profile picture" height="125">
     <h2>Profile</h2>
-    <p>Highly adaptable and dedicated professional with a proven track record of producing error-free results and delivering quality service. 
-        Committed to providing exceptional customer service by balancing company objectives with the needs of customers to ensure satisfactory solutions. 
-        Possess expertise in both technology management and manpower supervision, with a focus on optimizing efficiency and maximizing productivity.</p>
+    <p>Versatile professional with experience in operations, finance, sales, marketing and design. Skilled in supervision, problem-solving, and customer service with strong teamwork and analytical abilities. Creative, adaptable, and based in Stockholm, seeking new opportunities to contribute and grow.</p>
     <hr>
     <h2>Education</h2>
     <ul>
@@ -121,11 +118,12 @@
     </ul>
     <hr>
     <h2>Contact Details</h2>
-    <p>Phone: <a href="tel:+919998159279">+91 9998159279</a><br>
-        Email: <a href="mailto:rahul.sb199111@gmail.com">rahul.sb199111@gmail.com</a></p>
+    <p>Phone: <a href="tel:+46764326752">+46 764326752</a><br>
+        Email: <a href="mailto:imbaraiyarahul@gmail.com">imbaraiyarahul@gmail.com</a></p>
         <br>
     <footer>
         <p>© Rahul Baraiya. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
